# media-icopy

./: .gitignore  CHANGELOG.md  README.md  build.ps1  pyproject.toml  requirements.txt  run.py
config/: defaults.yaml
docs/: design.md  how_it_works.md  technical_spec.md
src/: __init__.py  core_runner.py  paths.py  utils.py
src/adapters/: __init__.py  cleanup_stream.py  local_source.py  mtp_adapter.py  protocol.py
src/domain/: __init__.py  batcher.py  copier.py  exceptions.py  models.py  retry.py
src/gui/: __init__.py  app.py  constants.py  main.py  mixins.py  state.py
src/gui/components/: __init__.py  folder_browser.py  modal.py  say_thanks.py  update_dialog.py
src/i18n/: __init__.py  i18n.py
src/i18n/locales/: en.yaml  uk.yaml
src/infrastructure/: __init__.py  config.py  logger.py
src/state/: __init__.py  db.py  schema.sql  session.py
tests/: conftest.py
tests/integration/: test_copy_pipeline.py  test_db.py  test_recovery.py
tests/unit/: test_batcher.py  test_config.py  test_copier.py  test_core_runner.py  test_edge_cases.py  test_local_source.py  test_mtp_adapter.py  test_retry_policy.py  test_state_machine.py  test_update_integration.py  test_utils.py
